--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cashify": "^2.4.2",
     "currency.js": "^1.2.2",
     "dayjs": "^1.8.28",
+    "formik": "^2.1.5",
     "graphql": "^15.0.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
