--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "yup": "^0.29.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI='false' react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:tailwind": "tailwindcss build src/styles/tailwind.css -o src/styles/tailwind-output.css",
+    "watch:tailwind": "chokidar 'src/**/*.css' --ignore src/styles/tailwind-output.css -c 'npm run build:tailwind' ",
+
+    "start": "npm-run-all build:tailwind --parallel watch:tailwind start:react",
+    "start:react": "react-scripts start",
+
+    "prebuild": "npm run build:tailwind",
+    "build": "CI='false' react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +47,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chokidar-cli": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^1.8.10"
+  }
 }
