--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "currency.js": "^1.2.2",
     "dayjs": "^1.8.28",
     "formik": "^2.1.5",
+    "framer-motion": "^3.2.1",
     "graphql": "^15.0.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
