--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.0.0-rc.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "apollo-link-context": "^1.0.20",
-    "axios": "^0.19.2",
+    "axios": "^0.22.0",
     "cashify": "^2.4.2",
     "currency.js": "^1.2.2",
     "dayjs": "^1.8.28",
@@ -16,11 +16,11 @@
     "framer-motion": "^3.2.1",
     "graphql": "^15.0.0",
     "jwt-decode": "^2.2.0",
-    "react": "^16.13.1",
+    "react": "^17.0.0",
     "react-datepicker": "^3.0.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "uuid": "^8.3.1",
     "yup": "^0.29.1"
   },
@@ -49,8 +49,8 @@
     ]
   },
   "devDependencies": {
-    "chokidar-cli": "^2.1.0",
+    "chokidar-cli": "^1.2.2",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "^2.2.16"
   }
 }
